--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "firebase-simple-login": "~1.6.3",
+    "angular-ui-router": "~0.2.11"
   }
 }
